# everycheese

./: pyproject.toml  pytest.ini
config/: urls.py
config/settings/: base.py
everycheese/cheeses/: models.py  urls.py  views.py
everycheese/cheeses/migrations/: 0001_initial.py  0002_cheese_country_of_origin.py  0003_cheese_creator.py
everycheese/cheeses/tests/: factories.py  test_models.py  test_urls.py  test_views.py
everycheese/templates/: base.html
everycheese/templates/cheeses/: cheese_detail.html  cheese_form.html  cheese_list.html
everycheese/users/migrations/: 0002_user_bio.py
