[tool.poetry]
name = "everycheese"
version = "0.1.0"
description = ""
authors = ["errantsky <dev@errantsky.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
black = "^21.7b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
